<resources>
  <string name="app_name">Mercury Scanner</string>
  <string name="update_result">Update Covid Result</string>
  <string name="edit_form">User Details</string>
  <string name="save_menu">Save</string>
  <string name="csv_menu">CSV</string>

  // aadhar related strings
  <string name="uid">UID Number *</string>
  <string name="id_type">ID Type *</string>
  <string name="location">Location *</string>
  <string name="name">Name *</string>
  <string name="date_of_birth">Date of Birth</string>
  <string name="year_of_birth">Year of Birth</string>
  <string name="gender">Gender *</string>
  <string name="address">Complete Address *</string>
  <string name="phone_number">Phone Number *</string>
  <string name="age">Age *</string>
  <string name="hint_uid">000000000000</string>
  <string name="hint_dob">DD-MM-YYYY</string>
  <string name="hint_yob">YYYY</string>
  <string name="hint_generic">XX</string>
  <string name="hint_phone_number">0000000000</string>
  <string name="err_generic">Invalid Input</string>

  <!--  login related strings-->
  <string name="title_activity_login">Login</string>
  <string name="username">Username</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign In</string>

  <string name="aadhar_card">Aadhar Card</string>
  <string name="passport">Passport</string>
  <string name="voter_id">Voter Id</string>
  <string name="pan_card">Pan Card</string>
  <string name="dl">Driving Licence</string>
  <string name="other">Other</string>
</resources>