<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFF"
    tools:context=".ui.edit_form.EditFormActivity"
    >

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingHorizontal="@dimen/dp_24"
      android:scrollbars="none"
      >

    <LinearLayout
        android:id="@+id/ll_basic_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_16"
        android:orientation="vertical"
        >

      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/location"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_location"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:maxLines="1"
          />


      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/id_type"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_id_type"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:inputType="numberDecimal"
          android:maxLines="1"
          android:text="@string/aadhar_card"
          />

      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/uid"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_uid"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_uid"
          android:maxLength="20"
          android:maxLines="1"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_err_uid"
          style="@style/text_11_red_light"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/err_generic"
          android:visibility="gone"
          />

      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/name"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_name"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_generic"
          android:inputType="textPersonName"
          android:maxLines="1"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_err_name"
          style="@style/text_11_red_light"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/err_generic"
          android:visibility="gone"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:orientation="horizontal"
          >

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_13_00_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/date_of_birth"
            />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/text_13_00_light"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_weight="1"
            android:text="@string/year_of_birth"
            />

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_dob"
            style="@style/et_16_5c_semi_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_dob"
            />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_yob"
            style="@style/et_16_5c_semi_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_weight="1"
            android:hint="@string/hint_yob"
            android:inputType="numberDecimal"
            android:maxLength="4"
            />

      </LinearLayout>

      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/address"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_address"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_generic"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_err_address"
          style="@style/text_11_red_light"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/err_generic"
          android:visibility="gone"
          />

      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/age"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_age"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_generic"
          android:inputType="numberDecimal"
          android:maxLength="2"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_err_age"
          style="@style/text_11_red_light"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/err_generic"
          android:visibility="gone"
          />

      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/gender"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_gender"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:focusableInTouchMode="false"
          android:hint="@string/hint_generic"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_err_gender"
          style="@style/text_11_red_light"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/err_generic"
          android:visibility="gone"
          />

      <androidx.appcompat.widget.AppCompatTextView
          style="@style/text_13_00_light"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dp_16"
          android:text="@string/phone_number"
          />

      <androidx.appcompat.widget.AppCompatEditText
          android:id="@+id/et_phone"
          style="@style/et_16_5c_semi_bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_phone_number"
          android:inputType="numberDecimal"
          android:maxLength="10"
          />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_err_phone"
          style="@style/text_11_red_light"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/err_generic"
          android:visibility="gone"
          />

    </LinearLayout>

  </ScrollView>
  <include layout="@layout/layout_progress" />

</androidx.constraintlayout.widget.ConstraintLayout>