<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.login.LoginActivity"
    >

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/et_username"
      style="@style/text_13_00_light"
      android:layout_width="match_parent"
      android:layout_height="32dp"
      android:layout_marginHorizontal="48dp"
      android:layout_marginTop="100dp"
      android:background="@drawable/bg_et_00"
      android:hint="@string/username"
      android:maxLines="1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/et_password"
      style="@style/text_13_00_light"
      android:layout_width="match_parent"
      android:layout_height="32dp"
      android:layout_marginHorizontal="48dp"
      android:layout_marginTop="@dimen/dp_16"
      android:background="@drawable/bg_et_00"
      android:hint="@string/prompt_password"
      android:imeOptions="actionDone"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_username"
      />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/button_login"
      style="@style/text_13_ff_bold"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:layout_marginTop="80dp"
      android:background="@drawable/bg_button"
      android:text="@string/action_sign_in"
      android:textAllCaps="false"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_password"
      />

  <include layout="@layout/layout_progress" />
</androidx.constraintlayout.widget.ConstraintLayout>